<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dirceubelem.GamesStats.JoinActivity"
    android:background="@color/cinza">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Criar Conta"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_login"
            android:textColor="@color/white"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtUsuario"
            android:inputType="textEmailAddress"
            android:hint="Entre com o login"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_senha"
            android:textColor="@color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtSenha" android:hint="Entre com a senha"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/botao_Cadstrar"
            android:id="@+id/btnCadastrar"
            android:textColor="@color/white"
            android:backgroundTint="@color/layoutColor"/>


    </LinearLayout>

</RelativeLayout>
